# Elewah-Resume

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  app.py  main.aux  main.fdb_latexmk  main.tex  pyproject.toml  references.bib  setup.cfg  t.py
.claude/skills/ats-checker/: SKILL.md
.claude/skills/ats-tex-editor/: SKILL.md
.claude/skills/pdf-visual-check/: SKILL.md
.github/workflows/: academic-version.yml  latex.yml
ats_resume_checker/: __init__.py  agent.py  checks.py  cli.py  latex.py  pdf_to_png.py  pdf_tools.py  report.py  ui.py
scripts/: install.sh  start-ui.sh
tests/: test_agent.py  test_checks.py  test_cli.py  test_fixtures.py  test_latex.py  test_pdf_to_png.py  test_pdf_tools.py  test_ui.py
tests/fixtures/: fontawesome5.sty  sample_clean.tex  sample_hidden_email_no_unicode.tex  sample_missing_contact_sections.tex  sample_table_skills_fontawesome.tex  sample_two_column_paracol.tex
