[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-resume-checker"
version = "0.1.0"
description = "Check LaTeX resumes for ATS-friendly PDF extraction."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Abdelrahman Elewah" }
]
keywords = ["resume", "ats", "latex", "pdf", "pdftotext"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[project.scripts]
ats-check = "ats_resume_checker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["ats_resume_checker*"]
