[metadata]
name = ats-resume-checker
version = 0.1.0
description = Check LaTeX resumes for ATS-friendly PDF extraction.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Abdelrahman Elewah
keywords = resume, ats, latex, pdf, pdftotext
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    ats-check = ats_resume_checker.cli:main

[options.extras_require]
dev =
    pytest>=7
ui =
    streamlit>=1.30
agent =
    claude-agent-sdk
